fixed a few styling issues. made it 100% width on mobile view.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,38 +6,18 @@ body {
     line-height: 12px;
 }
 
-li {
-    list-style: none;
-    margin: 10px 10px;
-}
-
-button {
-    font-size: 12px;
-    font-weight: 800;
-    font-family: Arial, Helvetica, sans-serif;
-    border: none;
-    background-color: #fff465;
-    text-transform: uppercase;
-    padding: 10px 10px;
-    margin: 15px;
-}
-
-button:hover {
-    background-color: #e66f20;
-    color: #fff465;
-}
-
 h3 {
-    font-size: 24px;
+    font-size: 18px;
     font-family: monospace;
-    margin: 20px;
+    margin: 20px 0;
+    padding: 20px 0px;
     font-weight: 500;
 }
 
 /* CONTAINER STYLES */
 
 .container {
-    width: 70%;
+    width: 80%;
     margin: 20px auto;
     overflow: auto;
 }
@@ -56,8 +36,8 @@ a {
     text-transform: uppercase;
     font-weight: 500;
     text-decoration: none;
-    padding: 10px 10px;
-    margin: 20px 0px;
+    padding: 15px 15px;
+    margin: 30px 0px;
 }
 
 a:hover{
@@ -66,8 +46,9 @@ a:hover{
     text-transform: uppercase;
     font-weight: 500;
     text-decoration: none;
-    padding: 10px 10px;
-    margin: 20px 0px;
+    padding: 15px 15px;
+    margin: 30px 0px;
+
 }
 
 
@@ -89,6 +70,27 @@ header .name {
 }
 /* QUESTION STYLES */
 
+li {
+    list-style: none;
+    margin: 10px 10px;
+}
+
+button {
+    font-size: 12px;
+    font-weight: 800;
+    font-family: Arial, Helvetica, sans-serif;
+    border: none;
+    background-color: #fff465;
+    text-transform: uppercase;
+    padding: 10px 10px;
+    margin: 15px;
+}
+
+button:hover {
+    background-color: #e66f20;
+    color: #fff465;
+}
+
 form {
     margin: 20px 20px;
 }
@@ -103,6 +105,7 @@ footer {
     background: #f7bee3;
     color:black;
     font-family:'Bungee Shade', cursive;
+    margin-top: 25px;
     padding: 20px 20px;
     overflow: auto;
     font-size: 16px;
@@ -110,7 +113,7 @@ footer {
 
 @media only screen and (max-width: 900px) {
     .container {
-        width: 90%;
+        width: 100%;
     }
 
     header .name {
